GNOME Bugzilla – Bug 732411
rtsp server GIR has wrong C include
Last modified: 2014-07-04 12:57:42 UTC
Created attachment 279514 [details] [review] introspection: fix C include name --c-include="gst/gst.h" is passed to g-ir-scanner. I *think* this should be --c-include="gst/rtsp-server/rtsp-server.h"... does rtsp-server.h include all the other headers? Attached patch assumes rtsp-server.h is correct.
rtsp-server.h doesn't include (directly or indirectly, AFAICT) rtsp-media-factory-uri.h and rtsp-params.h. Can we just add those two includes to rtsp-server.h? Or create a new single-include header, but I'm not sure what to call it.
It also does not include e.g. rtsp-context.h (which however includes rtsp-server.h itself!). There is some more work needed here to create a single-include header.
rtsp-server.h includes rtsp-client.h which includes rtsp-context.h. Based on a quick script I threw together rtsp-{media-factory-uri,params}.h are the only ones missing, though I really do any testing. #!/bin/sh HEADERS="" get_includes() { for header in `grep -oP '^\#include [\"][^\"]+' "$1" | cut -b11-`; do if [[ "$HEADERS" != *${header}* ]]; then HEADERS="$HEADERS $header" get_includes "$header" fi; done; } get_includes "$1" for header in $HEADERS; do echo $header done | sort
(In reply to comment #3) > though I really do any testing. err, really *didn't* do any testing.
Can you provide a patch for that then? I think for sanity it would be better to have direct includes to all public headers (see the variable with that name in Makefile.am) should be in there at the end.
Created attachment 279576 [details] [review] Make rtsp-server.h a single-include header, use it for G-I Is this what you had in mind?
commit 41d1ef7ed3df2471bea4894b6106020a74084f19 Author: Evan Nemerson <evan@nemerson.com> Date: Mon Jun 30 00:37:59 2014 -0700 Make rtsp-server.h a single-include header, use it for G-I https://bugzilla.gnome.org/show_bug.cgi?id=732411