Make rtsp-server.h a single-include header, use it for G-I

https://bugzilla.gnome.org/show_bug.cgi?id=732411